--- a/sample-practices-react/package.json
+++ b/sample-practices-react/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "concurrently": "^8.0.1",
     "express": "^4.18.2",
+    "json-server": "^0.17.3",
     "node": "^19.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -19,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server-userlogin": "nodemon ./src/Projects/User_Login/Server"
+    "json-server": "json-server --watch ./src/Projects/SimpleTemplate/mock-api/db.json --port 5000",
+    "dev": "concurrently \"npm start\" \"npm run json-server\""
   },
   "eslintConfig": {
     "extends": [
