--- a/sample-practices-react/package.json
+++ b/sample-practices-react/package.json
@@ -12,10 +12,13 @@
     "json-server": "^0.17.3",
     "node": "^19.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "stream": "^0.0.2",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
